--- a/proyecto-front/src/App.css
+++ b/proyecto-front/src/App.css
@@ -3,6 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  list-style-type: none;
 }
-
-
